deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-backend
  labels:
    app: deployment-backend
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: deployment-backend
  template:
    metadata:
      labels:
        app: deployment-backend
    spec:
      containers:
      - image: wbitt/network-multitool
        name: multitool
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: backend
