deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-frontend
  labels:
    app: deployment-frontend
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: deployment-frontend
  template:
    metadata:
      labels:
        app: deployment-frontend
    spec:
      containers:
      - image: nginx:1.19.2
        name: nginx
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: frontend
