service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-frontend
  namespace: default
spec:
  selector:
    app: deployment-frontend
  ports:
  - name: nginx
    port: 80
  type: ClusterIP
