Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: first-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  host: 51.250.101.159
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-frontend
            port:
              name: nginx
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: svc-backend
            port:
              name: multitool
